Update auth tests